@@ -17,7 +17,7 @@ package Dist::Zilla::Plugin::MakeMaker::Custom;
 # ABSTRACT: Allow a dist to have a custom Makefile.PL
 #---------------------------------------------------------------------
 
-our $VERSION = '4.13';
+our $VERSION = '4.15';
 # This file is part of {{$dist}} {{$dist_version}} ({{$date}})
 
 =head1 DEPENDENCIES
@@ -84,10 +84,11 @@ the template can handle.  The currently defined values are:
 compatibility with older versions of this plugin and Dist::Zilla.
 
 =item C<1>
-- Return TEST_REQUIRES (introduced in ExtUtils::MakeMaker 6.63_03) as a
-separate key (assuming it's not empty).  Your F<Makefile.PL> should
-either require ExtUtils::MakeMaker 6.63_03, or fold TEST_REQUIRES into
-BUILD_REQUIRES if an older version is used (as shown in the SYNOPSIS).
+- Return TEST_REQUIRES (introduced in ExtUtils::MakeMaker 6.63_03) as
+a separate key (assuming it's not empty), which requires Dist::Zilla
+4.300032 or later.  Your F<Makefile.PL> should either require
+ExtUtils::MakeMaker 6.63_03, or fold TEST_REQUIRES into BUILD_REQUIRES
+if an older version is used (as shown in the SYNOPSIS).
 
 =back
 
